feat(dynamic headers): added dynamic header script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <video autoplay muted loop id="hero">
     <source src="assets/hero.mp4" type="video/mp4">
     <source src="assets/hero.webm" type="video/webm" />
-    <source src="assets/hero.ogv" type="video/ogv" />
-    Your browser does not support HTML5 video.
+    <source src="assets/hero.ogv" type="video/ogv" /> Your browser does not support HTML5 video.
   </video>
   <header>
     <h1>Alexander Cannon</h1>
@@ -26,91 +25,101 @@
       I love my what I do, and I love learning. I am passionate about DevOps and driving organisational change.
     </p>
     <div class="experience">
-      <h2>Contact</h2>
-      <p>I'd love it if you contacted me via <a href="mailto:a.m.t.cannon@gmail.com?Subject=NotThe&middot;One%20Enquiry"
-          target="_top">email</a> or on <a href="https://twitter.com/alexmcan" target="blank">twitter</a>.</p>
-      <p>Alternatively, you can check me out on <a href="https://codepen.io/alexandercannon/" target="blank">codepen</a>
-        and <a href="https://github.com/alexandercannon/" target="blank">github</a>.
-      </p>
-      <h2>About me</h2>
-      <p>
-        I am a strong leader with over 9 years of industry experience.
-      </p>
-      <p>
-        I have been writing code for most of my life,
-        and I still enjoy learning new things and the challenges a career in software brings.
-      </p>
-      <p>
-        I love writing code, in my spare time I can usually be found sat in a
-        hipster coffee shop with my AlienWare
-        laptop, writing applications in whatever langue du jour has taken my fancy.
-      </p>
+      <div class="heading" data-title="Contact">
+        <h2>Contact</h2>
+        <p>I'd love it if you contacted me via
+          <a href="mailto:a.m.t.cannon@gmail.com?Subject=NotThe&middot;One%20Enquiry" target="_top">email</a> or on
+          <a href="https://twitter.com/alexmcan" target="blank">twitter</a>.</p>
+        <p>Alternatively, you can check me out on
+          <a href="https://codepen.io/alexandercannon/" target="blank">codepen</a>
+          and
+          <a href="https://github.com/alexandercannon/" target="blank">github</a>.
+        </p>
+      </div>
+      <div class="heading" data-title="About me">
+        <h2>About me</h2>
+        <p>
+          I am a strong leader with over 9 years of industry experience.
+        </p>
+        <p>
+          I have been writing code for most of my life, and I still enjoy learning new things and the challenges a career in software
+          brings.
+        </p>
+        <p>
+          I love writing code, in my spare time I can usually be found sat in a hipster coffee shop with my AlienWare laptop, writing
+          applications in whatever langue du jour has taken my fancy.
+        </p>
+      </div>
       <h2>Experience</h2>
-      <h3>Lloyds Banking Group; Engineering Lead</h3>
-      <p>
-        I lead a team building a number of node.js micro-services using node.js, Express, & TypeScript to strip
-        functionality out of the existing mainframe monolith, and build scalable, resilient, & deployable software.
-      </p>
-      <p>
-        I joined Lloyds to during a period of transition and was part of a team who were helping to transform
-        engineering
-        at Lloyds.
-      </p>
-      <p>
-        I helped to build a highly capable permanent engineering team to replace the consultants who were doing the
-        majority of work for the bank. I worked on a team who were re-platforming legacy systems using modern
-        technologies and techniques.
-      </p>
-      <p>
-        I was appointed to a cloud steering committee, who reported to the board, to help
-        bring cloud technologies into the bank, and to use DevOps best practices.
-      </p>
-      <p>
-        I also worked on replacing the
-        existing UI
-        with modern React/Redux, and building a component library for reuse across the bank as part of the
-        transformation work.
-      </p>
-      <h3>Accenture; Software Engineer</h3>
-      I joined Accenture in London before transferring to Dublin to work from Accenture's global innovation centre.
-      I was given the chance to work in a number of challenging environments, learn a number of different
-      technologies, and to deliver real value to clients.
-      Some clients I worked with during my time at Accenture:
-      <ul>
-        <li>Australian Telco; Node.js, React, MongoDB</li>
-        <li>Retail Bank; Technological Architecture, Systems Design</li>
-        <li>Search Giant; Data Science, Python</li>
-        <li>National Central Bank; Technological Architecture</li>
-        <li>International Broadcaster; HHVM/Hack, Angular.js, AWS</li>
-      </ul>
-      <h3>Buddi; Full Stack Developer</h3>
-      <p>
-        Buddi have a broad range of technologies that they use for electronic monitoring equipment.
-      </p>
-      <p>
-        My work involved
-        helping to develop new platforms, adding functionality to existing platforms, improving response times and
-        functionality in the API layer. It was a diverse role using node.js, ExtJS, jQuery, and OpenGL. I also
-        supported a web portal built in PHP.
-      </p>
-      <h3>The Federation Against Copyright Theft: Systems Programmer</h3>
-      <p>
-        I aided in the development of tools & crawlers which were used to automate anti-piracy tasks and provide time
-        saving tools for the internet investigation team. The projects use crawler technologies and pattern matching to
-        gather information from the web.
-      </p>
-      <h3>AlTim Software; Software Developer</h3>
-      <p>
-        I worked part time while studying for my degree, during this role I learned Python/ Django, PostgreSQL and
-        MooTools.
-      </p>
+      <div class="heading" data-title="Lloyds Banking Group">
+        <h3>Lloyds Banking Group; Engineering Lead</h3>
+        <p>
+          I lead a team building a number of node.js micro-services using node.js, Express, & TypeScript to strip functionality out
+          of the existing mainframe monolith, and build scalable, resilient, & deployable software.
+        </p>
+        <p>
+          I joined Lloyds to during a period of transition and was part of a team who were helping to transform engineering at Lloyds.
+        </p>
+        <p>
+          I helped to build a highly capable permanent engineering team to replace the consultants who were doing the majority of work
+          for the bank. I worked on a team who were re-platforming legacy systems using modern technologies and techniques.
+        </p>
+        <p>
+          I was appointed to a cloud steering committee, who reported to the board, to help bring cloud technologies into the bank,
+          and to use DevOps best practices.
+        </p>
+        <p>
+          I also worked on replacing the existing UI with modern React/Redux, and building a component library for reuse across the
+          bank as part of the transformation work.
+        </p>
+      </div>
+      <div class="heading" data-title="Accenture">
+        <h3>Accenture; Software Engineer</h3>
+        I joined Accenture in London before transferring to Dublin to work from Accenture's global innovation centre. I was given
+        the chance to work in a number of challenging environments, learn a number of different technologies, and to deliver
+        real value to clients. Some clients I worked with during my time at Accenture:
+        <ul>
+          <li>Australian Telco; Node.js, React, MongoDB</li>
+          <li>Retail Bank; Technological Architecture, Systems Design</li>
+          <li>Search Giant; Data Science, Python</li>
+          <li>National Central Bank; Technological Architecture</li>
+          <li>International Broadcaster; HHVM/Hack, Angular.js, AWS</li>
+        </ul>
+      </div>
+      <div class="heading" data-title="Buddi">
+        <h3>Buddi; Full Stack Developer</h3>
+        <p>
+          Buddi have a broad range of technologies that they use for electronic monitoring equipment.
+        </p>
+        <p>
+          My work involved helping to develop new platforms, adding functionality to existing platforms, improving response times and
+          functionality in the API layer. It was a diverse role using node.js, ExtJS, jQuery, and OpenGL. I also supported
+          a web portal built in PHP.
+        </p>
+      </div>
+      <div class="heading" data-title="FACT">
+        <h3>The Federation Against Copyright Theft: Systems Programmer</h3>
+        <p>
+          I aided in the development of tools & crawlers which were used to automate anti-piracy tasks and provide time saving tools
+          for the internet investigation team. The projects use crawler technologies and pattern matching to gather information
+          from the web.
+        </p>
+      </div>
+      <div class="heading" data-title="Contact">
+        <h3>AlTim Software; Software Developer</h3>
+        <p>
+          I worked part time while studying for my degree, during this role I learned Python/ Django, PostgreSQL and MooTools.
+        </p>
+      </div>
     </div>
     <div>
-      <h2>Education</h2>
-      <ul>
-        <li>Oxford Brookes University; Computer Science 2-1</li>
-        <li>Claire's Court Schools; A-levels, Chemistry, Psychology</li>
-      </ul>
+      <div class="heading" data-title="Education">
+        <h2>Education</h2>
+        <ul>
+          <li>Oxford Brookes University; Computer Science 2-1</li>
+          <li>Claire's Court Schools; A-levels, Chemistry, Psychology</li>
+        </ul>
+      </div>
     </div>
     <svg class="dor" width="100%" viewBox="0 0 633 100">
       <g transform="translate(0,125) scale(0.1,-0.1)" fill="#ffffff" stroke="none">
