fix(scroll title): improved quality of scroll title)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <source src="assets/hero.ogv" type="video/ogv" /> Your browser does not support HTML5 video.
   </video>
   <header>
-    <h1>Alexander Cannon</h1>
-    <h2>Engineering lead</h2>
+    <h1 data-title="Alexander Cannon">Alexander Cannon</h1>
   </header>
   <div class="content">
     <p>
@@ -50,7 +49,9 @@
           applications in whatever langue du jour has taken my fancy.
         </p>
       </div>
-      <h2>Experience</h2>
+      <div class="heading" data-title="Experience">
+        <h2>Experience</h2>
+      </div>
       <div class="heading" data-title="Lloyds Banking Group">
         <h3>Lloyds Banking Group; Engineering Lead</h3>
         <p>
