fix(index): Fixed typographical error in data attribute

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           from the web.
         </p>
       </div>
-      <div class="heading" data-title="Contact">
+      <div class="heading" data-title="AlTim">
         <h3>AlTim Software; Software Developer</h3>
         <p>
           I worked part time while studying for my degree, during this role I learned Python/ Django, PostgreSQL and MooTools.
