fix(index): Changed Lloyds title to tla

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="heading" data-title="Experience">
         <h2>Experience</h2>
       </div>
-      <div class="heading" data-title="Lloyds Banking Group">
+      <div class="heading" data-title="LBG">
         <h3>Lloyds Banking Group; Engineering Lead</h3>
         <p>
           I lead a team building a number of node.js micro-services using node.js, Express, & TypeScript to strip functionality out
