feat(title): Added job title to intro paragraph section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <h1 data-title="Alexander Cannon">Alexander Cannon</h1>
   </header>
   <div class="content">
-    <p>
-      I love my what I do, and I love learning. I am passionate about DevOps and driving organisational change.
-    </p>
+    <div class="heading" data-title="Engineering Lead">
+      <h2>Engineering Lead</h2>
+      <p>
+        I love my what I do, and I love learning. I am passionate about DevOps and driving organisational change.
+      </p>
+    </div>
     <div class="experience">
       <div class="heading" data-title="Contact">
         <h2>Contact</h2>
